--- a/index.html
+++ b/index.html
@@ -78,29 +78,54 @@
             display: none;
         }
 
-        /* Desktop Parallax */
-        .parallax {
+        /* New Background Image Container */
+        .background-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
             height: 100vh;
+            z-index: 0;
+            overflow: hidden;
+        }
+
+        .background-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out; /* Smooth fade between images */
+        }
+
+        .background-image.active {
+            opacity: 1;
+        }
+
+        .section1-bg {
+            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481240205_122104708496788144_7861009559523656818_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=HMYuE5V7OfcQ7kNvgGRFxVc&_nc_oc=AdhVUGaEBB2qHzaOyMnHEmROhUMnEO8A-WoYtiZm8Ta2_hCbshpMem6-TojJe7HkbxIOzuFLVEqbJtDXnlHJvpMd&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFOu504uPotz9k5IUszDL8t&oh=00_AYAODXtLDP160OxkjMnZ8AJWyM1QGMZeVLOuxQ3RfsPrXA&oe=67CF14D8');
+        }
+
+        .section2-bg {
+            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481224988_122103381554788144_3758171466406026658_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=OACE15PFTYoQ7kNvgGL5HlH&_nc_oc=AdjPYacBjDQHJNpddX6pG434UPgXdzJYHuG5qUZI5SeUFdpWnIRLjViQRcObWso6zlxqX6aloCpRlMBxlBa7Lk4L&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=Ac5twwD9b5-A3Sqw7ZTg1Be&oh=00_AYDNujkDGgo4O_jpDN9CsVJa0hBpAJT6btdieeG5TY1YBg&oe=67CEF6C6');
+        }
+
+        .section3-bg {
+            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481265542_122103381548788144_2439754144633299739_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=2Jv3Lof3zgIQ7kNvgGyc98p&_nc_oc=Adh4HVKpMyMrEF08FgXNtIkpibWL2LBage6IWSiLLTJn5dlZHbpOam7eDG0B3ngXqMkZ_K5x_7QVs0lwMT5nOvRK&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=ACbfvk6CSAX3x9jbsMrByTc&oh=00_AYBXEwUrebSYBuUopyBlcVso9ajcO0Swom9TOo1B_3m0wg&oe=67CF15F1');
+        }
+
+        /* Content Sections */
+        .parallax {
+            height: 100vh;
             position: relative;
             display: flex;
             align-items: center;
             justify-content: center;
-            z-index: 1;
-        }
-
-        .section1 {
-            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481240205_122104708496788144_7861009559523656818_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=HMYuE5V7OfcQ7kNvgGRFxVc&_nc_oc=AdhVUGaEBB2qHzaOyMnHEmROhUMnEO8A-WoYtiZm8Ta2_hCbshpMem6-TojJe7HkbxIOzuFLVEqbJtDXnlHJvpMd&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFOu504uPotz9k5IUszDL8t&oh=00_AYAODXtLDP160OxkjMnZ8AJWyM1QGMZeVLOuxQ3RfsPrXA&oe=67CF14D8');
-        }
-
-        .section2 {
-            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481224988_122103381554788144_3758171466406026658_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=OACE15PFTYoQ7kNvgGL5HlH&_nc_oc=AdjPYacBjDQHJNpddX6pG434UPgXdzJYHuG5qUZI5SeUFdpWnIRLjViQRcObWso6zlxqX6aloCpRlMBxlBa7Lk4L&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=Ac5twwD9b5-A3Sqw7ZTg1Be&oh=00_AYDNujkDGgo4O_jpDN9CsVJa0hBpAJT6btdieeG5TY1YBg&oe=67CEF6C6');
-        }
-
-        .section3 {
-            background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481265542_122103381548788144_2439754144633299739_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=2Jv3Lof3zgIQ7kNvgGyc98p&_nc_oc=Adh4HVKpMyMrEF08FgXNtIkpibWL2LBage6IWSiLLTJn5dlZHbpOam7eDG0B3ngXqMkZ_K5x_7QVs0lwMT5nOvRK&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=ACbfvk6CSAX3x9jbsMrByTc&oh=00_AYBXEwUrebSYBuUopyBlcVso9ajcO0Swom9TOo1B_3m0wg&oe=67CF15F1');
+            z-index: 1; /* Above background */
         }
 
         .content {
@@ -151,7 +176,6 @@
             transform: scale(1.1);
         }
 
-        /* Footer */
         footer {
             background: #333;
             color: white;
@@ -161,20 +185,13 @@
             z-index: 1;
         }
 
-        .footer-container {
+        .footer-content {
             width: 100%;
             max-width: 1200px;
             margin: 0 auto;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .footer-content {
-            width: 100%;
-            display: flex;
             justify-content: space-between;
-            align-items: flex-start;
+            align-items: center; /* Consistent alignment on desktop */
         }
 
         .footer-left {
@@ -182,7 +199,6 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            margin-bottom: 20px; /* Align with wholesale-link’s margin-top */
         }
 
         .footer-logo {
@@ -194,7 +210,7 @@
             text-align: right;
             display: flex;
             flex-direction: column;
-            justify-content: flex-end;
+            justify-content: center;
         }
 
         .footer-right a {
@@ -214,11 +230,7 @@
             text-decoration: underline;
         }
 
-        /* Mobile Background Container */
-        .mobile-background {
-            display: none;
-        }
-
+        /* Responsive Design */
         @media (max-width: 768px) {
             .hamburger {
                 display: block;
@@ -250,37 +262,6 @@
                 clip-path: none;
             }
 
-            .parallax {
-                background-image: none !important;
-            }
-
-            .mobile-background {
-                display: block;
-                position: fixed;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100vh;
-                z-index: 0;
-            }
-
-            .mobile-background div {
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 100%;
-                background-position: center;
-                background-repeat: no-repeat;
-                background-size: cover;
-                opacity: 0;
-                transition: opacity 0.5s ease-in-out;
-            }
-
-            .mobile-background div.active {
-                opacity: 1;
-            }
-
             .content {
                 padding: 1rem;
             }
@@ -299,8 +280,6 @@
                 text-align: center;
                 align-items: center;
                 width: 100%;
-                justify-content: center;
-                margin-bottom: 0;
             }
 
             footer {
@@ -316,9 +295,10 @@
             }
         }
 
+        /* Desktop Parallax Fallback */
         @media (min-width: 769px) {
-            .parallax {
-                background-attachment: fixed;
+            .background-container {
+                position: fixed; /* Still fixed for desktop */
             }
         }
     </style>
@@ -334,19 +314,19 @@
                 <li><a href="#about">Process</a></li>
                 <li><a href="#contact">Get Yours</a></li>
             </ul>
-            <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_ht=scontent-iad3-1.xx&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="logo">
+            <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDNoz-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="logo">
         </nav>
     </header>
 
-    <!-- Mobile Background Container -->
-    <div class="mobile-background">
-        <div class="section1-bg active" data-section="home" style="background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481240205_122104708496788144_7861009559523656818_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=127cfc&_nc_ohc=HMYuE5V7OfcQ7kNvgGRFxVc&_nc_oc=AdhVUGaEBB2qHzaOyMnHEmROhUMnEO8A-WoYtiZm8Ta2_hCbshpMem6-TojJe7HkbxIOzuFLVEqbJtDXnlHJvpMd&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFOu504uPotz9k5IUszDL8t&oh=00_AYAODXtLDP160OxkjMnZ8AJWyM1QGMZeVLOuxQ3RfsPrXA&oe=67CF14D8');"></div>
-        <div class="section2-bg" data-section="about" style="background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481224988_122103381554788144_3758171466406026658_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=127cfc&_nc_ohc=OACE15PFTYoQ7kNvgGL5HlH&_nc_oc=AdjPYacBjDQHJNpddX6pG434UPgXdzJYHuG5qUZI5SeUFdpWnIRLjViQRcObWso6zlxqX6aloCpRlMBxlBa7Lk4L&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=Ac5twwD9b5-A3Sqw7ZTg1Be&oh=00_AYDNujkDGgo4O_jpDN9CsVJa0hBpAJT6btdieeG5TY1YBg&oe=67CEF6C6');"></div>
-        <div class="section3-bg" data-section="contact" style="background-image: url('https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481265542_122103381548788144_2439754144633299739_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=2Jv3Lof3zgIQ7kNvgGyc98p&_nc_oc=Adh4HVKpMyMrEF08FgXNtIkpibWL2LBage6IWSiLLTJn5dlZHbpOam7eDG0B3ngXqMkZ_K5x_7QVs0lwMT5nOvRK&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=ACbfvk6CSAX3x9jbsMrByTc&oh=00_AYBXEwUrebSYBuUopyBlcVso9ajcO0Swom9TOo1B_3m0wg&oe=67CF15F1');"></div>
+    <!-- Background Images -->
+    <div class="background-container">
+        <div class="background-image section1-bg active" data-section="home"></div>
+        <div class="background-image section2-bg" data-section="about"></div>
+        <div class="background-image section3-bg" data-section="contact"></div>
     </div>
 
     <!-- Parallax Sections -->
-    <div class="parallax section1" id="home">
+    <div class="parallax" id="home">
         <div class="content">
             <h1>Chill Bites with a Kick</h1>
             <p>Spicy-sour magic! Frozen mango, pineapple, grapes from Honduras—taste the SpiceFrost Fusion!</p>
@@ -357,7 +337,7 @@
         <span>Spicy Fruit Nuggs - Fresh from Honduras - Taste the Fusion - #FRUITNUGGS</span>
     </div>
 
-    <div class="parallax section2" id="about">
+    <div class="parallax" id="about">
         <div class="content">
             <h1>From Harvest to Hand</h1>
             <p>Hand-picked in Honduras, cubed to perfection, and coated with tajín-inspired magic—delivered fresh to you!</p>
@@ -368,7 +348,7 @@
         <span>#FRUITNUGGS Mango congelado 🥭❄️, piña 🍍❄️, uvas 🍇❄️, y fresa 🍓❄️—¡Con un toque mágico!</span>
     </div>
 
-    <div class="parallax section3" id="contact">
+    <div class="parallax" id="contact">
         <div class="content">
             <h1>Get Yours</h1>
             <p>Grab your 8oz cup of Fruit Nuggs today—spicy, sour, and ready to enjoy! #FRUITNUGGS </p>
@@ -380,20 +360,18 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-container">
-            <div class="footer-content">
-                <div class="footer-left">
-                    <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_ht=scontent-iad3-1.xx&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
-                    <p>© 2025 FruitNuggs. All rights reserved.</p>
-                </div>
-                <div class="footer-right">
-                    <p>Got questions? Reach out via e-mail at:</p>
-                    <a href="mailto:FruitNuggs@gmail.com">FruitNuggs@gmail.com</a>
-                </div>
+        <div class="footer-content">
+            <div class="footer-left">
+                <img src="https://scontent-iad3-1.xx.fbcdn.net/v/t39.30808-6/481814329_1302637640976089_2876000521453736078_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=6ee11a&_nc_ohc=VARFTlCkcHwQ7kNvgGtq_M-&_nc_oc=AdjEZV9GgKRre0hwlMd-wD_J0_jyCo-AfRvKKAyz8eSUakuuoDNoz-gf_OAohNeZsjt2EXZgcBCbHM5QIY7ZjN6e&_nc_zt=23&_nc_ht=scontent-iad3-1.xx&_nc_gid=AFKodEuBhglwQ4DiOqiDGC9&oh=00_AYAOXxd95nEBsVa0sfVSUnXgE19re-i4ha60qfMmqIQY1A&oe=67CEF291" alt="Fruit Nuggs Logo" class="footer-logo">
+                <p>© 2025 FruitNuggs. All rights reserved.</p>
             </div>
-            <div class="wholesale-link">
-                <a href="https://forms.gle/Bf7LBrZBK78XTUgXA" target="_blank">Interested in wholesale? Click here</a>
+            <div class="footer-right">
+                <p>Got questions? Reach out via e-mail at:</p>
+                <a href="mailto:FruitNuggs@gmail.com">FruitNuggs@gmail.com</a>
             </div>
+        </div>
+        <div class="wholesale-link">
+            <a href="https://forms.gle/Bf7LBrZBK78XTUgXA" target="_blank">Interested in wholesale? Click here</a>
         </div>
     </footer>
 
@@ -410,38 +388,26 @@
             });
         });
 
-        // Mobile background fading
-        function updateMobileBackground() {
-            if (window.innerWidth > 768) return;
-
+        // Background image switching
+        function updateBackground() {
             const sections = document.querySelectorAll('.parallax');
-            const backgroundImages = document.querySelectorAll('.mobile-background div');
-            const scrollPosition = window.scrollY;
-            const windowHeight = window.innerHeight;
+            const backgroundImages = document.querySelectorAll('.background-image');
+            const scrollPosition = window.scrollY + window.innerHeight / 2;
 
-            sections.forEach((section, index) => {
+            sections.forEach(section => {
                 const sectionTop = section.offsetTop;
                 const sectionBottom = sectionTop + section.offsetHeight;
-                const nextSectionTop = index < sections.length - 1 ? sections[index + 1].offsetTop : document.body.scrollHeight;
+                const sectionId = section.id;
 
-                if (scrollPosition >= sectionTop - windowHeight / 2 && scrollPosition < nextSectionTop - windowHeight / 2) {
-                    const progress = (scrollPosition - (sectionTop - windowHeight / 2)) / (section.offsetHeight + windowHeight);
-                    const currentImg = backgroundImages[index];
-                    const nextImg = backgroundImages[index + 1] || backgroundImages[index];
-
-                    backgroundImages.forEach(img => img.classList.remove('active'));
-
-                    currentImg.classList.add('active');
-                    currentImg.style.opacity = Math.max(1 - progress, 0);
-
-                    if (nextImg !== currentImg) {
-                        nextImg.classList.add('active');
-                        nextImg.style.opacity = Math.min(progress, 1);
-                    }
+                if (scrollPosition >= sectionTop && scrollPosition < sectionBottom) {
+                    backgroundImages.forEach(img => {
+                        img.classList.toggle('active', img.dataset.section === sectionId);
+                    });
                 }
             });
         }
 
+        // Debounce for performance
         function debounce(func, wait) {
             let timeout;
             return function() {
@@ -450,13 +416,11 @@
             };
         }
 
-        if (window.innerWidth <= 768) {
-            const debouncedUpdate = debounce(updateMobileBackground, 10);
-            window.addEventListener('scroll', debouncedUpdate);
-            window.addEventListener('load', updateMobileBackground);
-            window.addEventListener('resize', debouncedUpdate);
-            window.addEventListener('orientationchange', debouncedUpdate);
-        }
+        const debouncedUpdate = debounce(updateBackground, 100);
+        window.addEventListener('scroll', debouncedUpdate);
+        window.addEventListener('load', updateBackground);
+        window.addEventListener('resize', debouncedUpdate);
+        window.addEventListener('orientationchange', debouncedUpdate);
     </script>
 </body>
 </html>
